# ai-mlops

./: .pre-commit-config.yaml  README.md  USAGE_INSTRUCTIONS.md
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .env.example  app.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_indexes.py
backend/app/: dependencies.py  main.py
backend/app/core/: cache.py  config.py  database.py  logging.py  metrics.py  security.py  validators.py
backend/app/models/: prediction.py  schemas.py  user.py
backend/app/routers/: __init__.py  auth.py  drift.py  health.py  predictions.py  stats.py
backend/app/services/: drift_service.py  ml_service.py  prediction_service.py  scheduler.py
backend/app/tasks/: __init__.py  celery_app.py  prediction_tasks.py
backend/ml/: generate_data.py  train.py
backend/ml/data/: .gitkeep  sentiment_dataset_v2.csv
backend/ml/models/: .gitkeep  model_metadata.json  sentiment_v2.pkl  vectorizer_v2.pkl
backend/tests/: conftest.py
backend/tests/integration/: test_api_flow.py
backend/tests/load/: __init__.py  locustfile.py
docs/runbooks/: deployment.md  incident-response.md  model-retraining.md
sentiment-frontend/: package-lock.json  tailwind.config.js
sentiment-frontend/src/: App.jsx  index.css
sentiment-frontend/src/components/: AnalysisInput.jsx  AnalyticsChart.jsx  BatchAnalysis.jsx  Header.jsx  HistoryList.jsx  ResultsDisplay.jsx  StatsDashboard.jsx  Toast.jsx
